--- a/Forum/Pages/Index.razor
+++ b/Forum/Pages/Index.razor
@@ -1,7 +1,8 @@
 @page "/"
-@attribute [Authorize(Roles = "user")]
+@*attribute [Authorize(Roles = "user")]*@
 @using Microsoft.EntityFrameworkCore;
 @using System.Security.Claims;
+@inject NavigationManager NavigationManager; 
 
 <h1>You can only see this if you're authorized.</h1>
 @*<h1>Hello, world!</h1>
@@ -21,16 +22,21 @@ Welcome to your new app.*@
 	</Authorized>
 	<NotAuthorized>
 		<label><b style="color: red;">You are not authorized.</b></label>
-		<p>@context.User.Identity.Name</p>
-		<ul>
-			@foreach (Claim c in context.User.Claims)
-			{
-				<li>@c.Type: @c.Value</li>
-			}
-		</ul>
 	</NotAuthorized>
 </AuthorizeView>
 
 @code {
+	[CascadingParameter]
+	private Task<AuthenticationState> authenticationStateTask { get; set; }
 
+	protected async override Task OnInitializedAsync()
+	{
+		var authenticationState = await authenticationStateTask;
+
+		if (!authenticationState.User.Identity.IsAuthenticated)
+		{
+			// Send unauthorized users to the login page
+			NavigationManager.NavigateTo("/login");
+		}
+	}
 }
