--- a/Forum/Pages/RegisterPage.razor
+++ b/Forum/Pages/RegisterPage.razor
@@ -2,14 +2,15 @@
 @using BCrypt.Net;
 @using Microsoft.EntityFrameworkCore; 
 @using Forum.Entity;
+@using System.ComponentModel.DataAnnotations;
 @inject IDbContextFactory<Model.Database> DbContext;
 @inject NavigationManager NavigationManager; 
 
 <h3>Register</h3>
-<input type="text" @bind-value="_accname" placeholder="Account name" />
-<input type="email" @bind-value="_email" placeholder="Email Address" />
-<input type="password" @bind-value="_passwd" placeholder="Password" />
-<input type="password" @bind-value="_repeatpw" placeholder="Repeat Password" />
+<input type="text" @bind-value="_registerModel.AccountName" placeholder="Account name" />
+<input type="email" @bind-value="_registerModel.Email" placeholder="Email Address" />
+<input type="password" @bind-value="_registerModel.Password" placeholder="Password" />
+<input type="password" @bind-value="_registerModel.RepeatPassword" placeholder="Repeat Password" />
 <button @onclick="HashPw">Register</button>
 <p>@_message</p>
 
@@ -17,10 +18,7 @@
 	[CascadingParameter]
 	private Task<AuthenticationState> authenticationStateTask { get; set; }
 
-	private string _accname;
-	private string _email;
-	private string _passwd;
-	private string _repeatpw;
+	private RegisterModel _registerModel = new RegisterModel();
 
 	private string _message;
 
@@ -37,56 +35,57 @@
 
 	private async Task HashPw()
 	{
-		if (checkInput())
+		string pwHash = BCrypt.EnhancedHashPassword(_registerModel.Password, 12);
+
+		using var db = DbContext.CreateDbContext();
+
+		if (db.Users.Where(u => u.AccountName == _registerModel.AccountName).Any())
 		{
-			string pwHash = BCrypt.EnhancedHashPassword(_passwd, 12);
-
-			using var db = DbContext.CreateDbContext();
-
-			if (db.Users.Where(u => u.AccountName == _accname).Any())
-			{
-				_message = "Username already exists.";
-				return;
-			}
-
-			if (db.Users.Where(u => u.Email == _email).Any())
-			{
-				_message = "There already is an account with this email address.";
-				return;
-			}
-
-			User user = new User()
-			{
-				AccountName = _accname,
-				Email = _email,
-				PwHash = pwHash
-			};
-
-			try
-			{
-				await db.Users.AddAsync(user);
-				await db.SaveChangesAsync();
-
-				NavigationManager.NavigateTo("/login");
-			}
-			catch (Exception ex)
-			{
-				Console.WriteLine(ex.Message);
-			}
+			_message = "Username already exists.";
+			return;
 		}
 
+		if (db.Users.Where(u => u.Email == _registerModel.Email).Any())
+		{
+			_message = "There already is an account with this email address.";
+			return;
+		}
+
+		User user = new User()
+		{
+			AccountName = _registerModel.AccountName,
+			Email = _registerModel.Email,
+			PwHash = pwHash
+		};
+
+		try
+		{
+			await db.Users.AddAsync(user);
+			await db.SaveChangesAsync();
+
+			NavigationManager.NavigateTo("/login");
+		}
+		catch (Exception ex)
+		{
+			Console.WriteLine(ex.Message);
+		}
 	}
 
-	private bool checkInput()
+	public class RegisterModel
 	{
-		if (!string.IsNullOrEmpty(_accname) &&
-			!string.IsNullOrEmpty(_email) &&
-			!string.IsNullOrEmpty(_passwd) &&
-			!string.IsNullOrEmpty(_repeatpw))
-		{
-			if (_passwd == _repeatpw) return true;
-		}
+		[Required]
+		public string AccountName { get; set; }
 
-		return false;
+		public string DisplayName { get; set; }
+
+		[Required]
+		public string Email { get; set; }
+
+		[Required]
+		public string Password { get; set; }
+
+		[Required]
+		[Compare(nameof(Password), ErrorMessage = "Passwords don't match.")]
+		public string RepeatPassword { get; set; }
 	}
 }
