--- a/Forum/wwwroot/css/site.css
+++ b/Forum/wwwroot/css/site.css
@@ -1,43 +1,104 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    background: #000;
-    color: #FFF;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	background: #000;
+	color: #FFF;
 }
+
+input {
+	border: none;
+	margin: 1rem;
+	width: 100%;
+	border-radius: 0.5rem; 
+}
+
+	input:focus {
+		outline-color: #512DFC;
+		outline-width: 0.1rem;
+		outline-style: solid;
+	}
+
+div {
+	border-radius: 0.7rem;
+}
+
+a {
+	text-decoration: none;
+}
+
+	a:hover {
+		text-decoration: underline;
+	}
 
 .main-div {
-    background-color: #282C37;
-    color: #9BAEC8;
+	background-color: #191B22;
+	color: #9BAEC8;
 }
 
+.main-color {
+	background: #282C37;
+	color: #9BAEC8;
+}
+
+button {
+	border: none;
+}
+
+	button:hover {
+		filter: brightness(60%);
+		color: white;
+	}
+
+.bg-red {
+	background: #D03F3F;
+}
+
+.bg-green {
+	background: #2E8427;
+}
+
+.bg-blue {
+	background: #512DFC;
+}
+
+
+
+
+
+
+
+
+
+
 .valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
+	outline: 1px solid #26b050;
 }
 
 .invalid {
-    outline: 1px solid red;
+	outline: 1px solid red;
 }
 
 .validation-message {
-    color: red;
+	color: red;
 }
 
 #blazor-error-ui {
-    background: lightyellow;
-    bottom: 0;
-    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
-    display: none;
-    left: 0;
-    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
+	background: gray;
+	color: black;
+	bottom: 0;
+	box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
+	display: none;
+	left: 0;
+	padding: 0.6rem 1.25rem 0.7rem 1.25rem;
+	position: fixed;
+	width: 100%;
+	z-index: 1000;
 }
 
-    #blazor-error-ui .dismiss {
-        cursor: pointer;
-        position: absolute;
-        right: 0.75rem;
-        top: 0.5rem;
-    }
+	#blazor-error-ui .dismiss {
+		cursor: pointer;
+		position: absolute;
+		right: 0.75rem;
+		top: 0.5rem;
+	}
