--- a/Forum/Pages/_Host.cshtml
+++ b/Forum/Pages/_Host.cshtml
@@ -17,6 +17,7 @@
 	<link href="Forum.styles.css" rel="stylesheet" />
 </head>
 <body>
+    @*Prerendering needs to be disabled for Session Handling to work.*@
     <component type="typeof(App)" render-mode="Server" />
 
     <div id="blazor-error-ui">
