PwReset: Begun implementing pw reset:

--- a/Forum/Pages/Login.razor
+++ b/Forum/Pages/Login.razor
@@ -20,7 +20,7 @@
 		</NotAuthorized>
 		<Authorized>
 			<h3>Logout</h3>
-			<button @onclick="LogOut">Log out</button>
+			<button @onclick="LogOut">Log Out</button>
 			<a href="/">Home</a>
 		</Authorized>
 	</AuthorizeView>
