--- a/Forum/Pages/Index.razor
+++ b/Forum/Pages/Index.razor
@@ -1,14 +1,15 @@
 @page "/"
 @*attribute [Authorize(Roles = "user")]*@
-@using Microsoft.EntityFrameworkCore;
-@using System.Security.Claims;
-@inject NavigationManager NavigationManager; 
+@using Microsoft.EntityFrameworkCore
+@using System.Security.Claims
+@inject IDbContextFactory<Model.Database> DbContext
+@inject NavigationManager NavigationManager
 
 <h1>You can only see this if you're authorized.</h1>
 @*<h1>Hello, world!</h1>
-<button @onclick="AddUser">Add User</button>
+	<button @onclick="AddUser">Add User</button>
 
-Welcome to your new app.*@
+	Welcome to your new app.*@
 
 <AuthorizeView>
 	<Authorized>
@@ -29,6 +30,8 @@ Welcome to your new app.*@
 	[CascadingParameter]
 	private Task<AuthenticationState> authenticationStateTask { get; set; }
 
+	private List<Entity.Thread> _threads = new List<Entity.Thread>();
+
 	protected async override Task OnInitializedAsync()
 	{
 		var authenticationState = await authenticationStateTask;
@@ -38,5 +41,12 @@ Welcome to your new app.*@
 			// Send unauthorized users to the login page
 			NavigationManager.NavigateTo("/login");
 		}
+	}
+
+	private async void LoadThreads()
+	{
+		using var db = DbContext.CreateDbContext();
+
+		_threads = db.Threads.ToList();
 	}
 }
