Begun design of index page

--- a/Forum/Pages/CreateThread.razor
+++ b/Forum/Pages/CreateThread.razor
@@ -1,6 +1,7 @@
 ﻿@page "/post"
 @*TODO: Policies?*@
-@attribute [Authorize(Roles = "user")]
+@*@attribute [Authorize(Roles = "user")]*@
+@attribute [Authorize(Policy = "IsPoster")]
 @using Microsoft.EntityFrameworkCore
 @inject IDbContextFactory<Model.Database> DbContext
 
