Design of index and thread page

--- a/Forum/Components/ThreadPreview.razor
+++ b/Forum/Components/ThreadPreview.razor
@@ -1,9 +1,35 @@
 ﻿@using Forum.Entity
+@using System.IO 
+@inject NavigationManager NavMan 
 
-<h3>ThreadPreview</h3>
+<div @onclick="OpenThread" style="border-bottom: 2px solid #9BAEC8; border-radius: 0; cursor: pointer" class="needs-padding shiny">
+	<p class="p-annotation-sm">@ThreadModel.Creator.AccountName@@@ThreadModel.Forum.Name 
+		@ThreadModel.Created.ToString("t"), @ThreadModel.Created.ToString("d")</p>
+	<h5 class="txt-title">@ThreadModel.Title</h5>
+	<pre class="main">@_content</pre>
+</div>
 
 @code {
 	[Parameter]
 	public Thread ThreadModel { get; set; }
+
+	private string _content;
+
+	protected async override Task OnInitializedAsync()
+	{
+		string path = ThreadModel.ContentPath;
+
+		StreamReader streamReader = new StreamReader(path);
+
+		char[] buffer = new char[50];
+		streamReader.Read(buffer);
+
+		_content = new string(buffer);
+	}
+
+	private void OpenThread()
+	{
+		NavMan.NavigateTo("/thread/" + ThreadModel.Id);
+	}
 
 }
